--- a/style.css
+++ b/style.css
@@ -2,6 +2,48 @@
 .attribution a { color: hsl(228, 45%, 44%); } */
 body{
     background-color: hsl(227, 32%, 88%);
+    
 }
+h2, p, a, div {
+    font-family: 'Outfit', sans-serif;
+    text-align: center;
+}
+
 .container{
+   width: 300px;
+   height: 500px;
+   margin: calc( ((100vh - 490px) / 2) )
+           calc( (100vw - 320px) / 2 );
+   background-color: hsl(0, 0%, 100%);
+   border-radius: 5%;
+
 }
+.container img{
+    width: 90%;
+    border-radius: 5%;
+    margin: 5%;
+}
+
+.container h2{
+    width: 90%;
+    margin: 5%;
+    font-size: 25px;
+    color: hsl(218, 44%, 22%);
+    font-size: 23px;
+    font-weight: 700;
+}
+.container p{
+    width: 90%;
+    margin: 5%;
+    color: grey;
+}
+
+.footer{
+    text-align: center;
+    width: 100%;
+}
+
+
+
+
+
